# EasyWheelAE

./: README.md
EasyWheel-ae/: package-lock.json  package.json  tsconfig.json
EasyWheel-ae/src/: command_handler.ts  command_registry.ts  connection.ts  index.ts  ipc.ts
EasyWheel-ae/src/bridge/: adobe_context.ts  bridge_client.ts  bridge_server.ts  connection_manager.ts  dispatcher.ts  jsx_executor.ts  logger.ts  protocol.ts  registry.ts  test_bridge.js
EasyWheel-ae/src/commands/: duplicate_layer.ts  easy_ease.ts  echo.ts  graph_editor.ts  null_object.ts  parent.ts  ping.ts  pre_compose.ts  trim_paths.ts
EasyWheel-host/: index.html  overlay.html  package-lock.json  package.json  task.md  tsconfig.json  vite.config.ts
EasyWheel-host/host/: App.tsx  main.tsx
EasyWheel-host/host/ipc/: events.ts  protocol.ts  settings.ts
EasyWheel-host/host/overlay/: Overlay.css  Overlay.tsx  OverlayWindow.tsx  Wheel.tsx  WheelRenderer.tsx  WheelSlice.tsx  main.tsx
EasyWheel-host/host/services/: HotkeyService.ts  IPCService.ts  Logger.ts  WindowManager.ts
EasyWheel-host/host/settings/: SettingsApp.tsx  types.ts
EasyWheel-host/host/settings/components/actions/: ActionPicker.tsx
EasyWheel-host/host/settings/components/layout/: PageLayout.tsx  Sidebar.tsx
EasyWheel-host/host/settings/components/profiles/: RunningAppsDialog.tsx
EasyWheel-host/host/settings/components/ui/: Button.tsx  ColorPicker.tsx  HotkeyRecorder.tsx  Modal.tsx  SearchBar.tsx  Slider.tsx  ValidationMessage.tsx
EasyWheel-host/host/settings/components/wheel/: WheelEditor.tsx  WheelPreview.tsx
EasyWheel-host/host/settings/context/: ConfigContext.tsx
EasyWheel-host/host/settings/pages/: AboutPage.tsx  ActionsPage.tsx  AppearancePage.tsx  GeneralPage.tsx  ProfilesPage.tsx
EasyWheel-host/host/settings/utils/: commandHelper.ts
EasyWheel-host/host/styles/: global.css  settings.css
EasyWheel-host/host/types/: Action.ts  Direction.ts  Settings.ts
EasyWheel-host/host/utils/: geometry.ts  helpers.ts  math.ts
EasyWheel-host/src/: App.css  App.tsx
EasyWheel-host/src-tauri/: Cargo.toml  tauri.conf.json
EasyWheel-host/src-tauri/capabilities/: default.json  overlay.json
EasyWheel-host/src-tauri/src/: action_manager.rs  action_registry.rs  ae_bridge.rs  app_state.rs  command_dispatcher.rs  commands.rs  config_manager.rs  foreground_application.rs  geometry_manager.rs  host_config.rs  hotkey_manager.rs  input_manager.rs  lib.rs  main.rs  overlay_manager.rs  profile_manager.rs  provider_registry.rs  tray.rs  window_manager.rs
EasyWheel-host/src-tauri/src/ae_bridge/: ae_bridge_client.rs  bridge_status.rs  connection_manager.rs  mod.rs  request_queue.rs
EasyWheel-host/src-tauri/src/ipc/: mod.rs  protocol.rs  request.rs  response.rs
EasyWheel-host/src-tauri/src/models/: action.rs  command_context.rs  config.rs  mod.rs  profile.rs
EasyWheel-host/src-tauri/src/providers/: after_effects_provider.rs  mod.rs  photoshop_provider.rs  provider.rs  windows_provider.rs
bridges/after-effects/extension/: .debug  README.md
bridges/after-effects/extension/CSXS/: manifest.xml
bridges/after-effects/extension/client/: index.css  index.html  index.js
bridges/after-effects/extension/installer/: enable_debug.bat  install.bat  uninstall.bat
bridges/after-effects/extension/jsx/: bootstrap.jsx
