[package]
name = "easywheel-host"
version = "0.1.0"
description = "EasyWheel Host — Windows background service for EasyWheelAE"
authors = ["EasyWheelAE"]
edition = "2021"

[lib]
# The `_lib` suffix prevents a name collision between the library crate and
# the binary crate on Windows. See https://github.com/rust-lang/cargo/issues/8519
name = "easywheel_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` enables TrayIconBuilder, Menu, and tray event APIs.
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
