[package]
name = "easywheel-host"
version = "0.1.0"
description = "EasyWheel Host — Windows background service for EasyWheelAE"
authors = ["EasyWheelAE"]
edition = "2021"

[lib]
# The `_lib` suffix prevents a name collision between the library crate and
# the binary crate on Windows. See https://github.com/rust-lang/cargo/issues/8519
name = "easywheel_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` enables TrayIconBuilder, Menu, and tray event APIs.
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `rdev` provides a cross-platform low-level keyboard/mouse hook.
# On Windows it uses SetWindowsHookEx(WH_KEYBOARD_LL), which fires globally
# for all key events regardless of which application has focus.
rdev = "0.5"
# `dirs` resolves platform-specific user directories (e.g. %APPDATA%) without
# hardcoding paths. Used by ConfigManager to locate the config file.
dirs = "5"
# `rfd` provides native file/folder picker dialogs.
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
# `winapi` provides Win32 bindings for window, processes, and shell operations.
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winbase",
    "tlhelp32",
    "minwindef",
    "shellapi",
] }
